--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,84 @@ h6 { font-size: 0.875rem; font-size: var(--font-size-h6); }
 
 label { font-weight: 500; }
 
+.btn-g { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; margin-bottom: 0; text-align: center; vertical-align: middle; -ms-touch-action: manipulation; touch-action: manipulation; cursor: pointer; background-image: none; border: 0; white-space: nowrap; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; font-weight: 700; padding: 0 1rem; min-height: 2.5rem; text-transform: uppercase; font-size: 1rem; letter-spacing: -0.025rem; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+
+button { background: transparent; -webkit-appearance: none; -moz-appearance: none; appearance: none; border: 0; }
+
+.btn-back { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-bottom: 2rem; text-transform: uppercase; font-size: 0.75rem; -webkit-transition: all 0.15s; transition: all 0.15s; font-weight: 700; }
+
+.btn-back svg { margin-right: 0.5rem; -webkit-transition: all 0.15s; transition: all 0.15s; }
+
+.btn-back:hover svg, .btn-back:focus svg { -webkit-animation: bounce-left 0.5s forwards; animation: bounce-left 0.5s forwards; }
+
+.btn-forward { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; text-transform: uppercase; font-weight: 700; font-size: 0.875rem; padding-left: 0; padding-right: 0; }
+
+.btn-forward svg { margin-left: 0.5rem; width: 1rem; height: 1rem; }
+
+.input-text { padding: 0.25rem 0.5rem; -webkit-appearance: none; -moz-appearance: none; appearance: none; border: 0; background: white; line-height: 1; width: 100%; min-height: 2rem; font-size: 0.9rem; border-radius: 0; }
+
+.input-text.large { min-height: 2.5rem; }
+
+.input-text.medium { min-height: 2.5rem; }
+
+.radio-block { display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; padding-top: 0.0625rem; margin-bottom: 0.75rem; }
+
+.radio-block:hover .radio { border-color: white; }
+
+.radio-block .radio { margin: 0; display: block; position: absolute; border: 0.2rem solid white; border-radius: 100%; height: 1.8rem; width: 1.8rem; top: 0; left: 0; z-index: 5; -webkit-transition: border .25s linear; transition: border .25s linear; }
+
+.radio-block .radio::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 0.75rem; width: 0.75rem; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); -webkit-transition: background 0.15s linear; transition: background 0.15s linear; }
+
+.radio-block .radio-label { padding-left: 2.5rem; position: relative; z-index: 5; margin: 0; height: 28px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+
+.radio-block input[type=radio]:checked ~ .radio { border: 0.2rem solid #81abde; }
+
+.radio-block input[type=radio]:checked ~ .radio::before { background: #81abde; }
+
+.radio-block input[type=radio]:checked ~ label { color: #81abde; }
+
+.input-horizontal { margin-bottom: 1rem; position: relative; }
+
+@media (min-width: 768px) { .input-horizontal { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+  .input-horizontal > label { width: 10rem; line-height: 1.2; padding-right: 2rem; }
+  .input-horizontal input, .input-horizontal select { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; } }
+
+.input-horizontal label.error { margin-left: 10rem; }
+
+.input-horizontal .req { color: #e24f44; position: absolute; left: -1rem; }
+
+.txt-underline { text-decoration: underline; }
+
+.txt-semibold { font-weight: 500; }
+
+.txt-ucase { text-transform: uppercase; }
+
+.txt-read { max-width: 60rem; }
+
+.txt-brand { color: #4483ce; }
+
+.txt-large { font-size: 3rem; line-height: 1; font-weight: 700; }
+
+.txt-medium { font-size: 1.5rem; line-height: 1.2; }
+
+.icon-stroke { stroke: currentColor; }
+
+.icon-fill { fill: currentColor; }
+
+.icon-sm { width: 1rem; height: 1rem; }
+
+.icon-md { width: 3rem; height: 3rem; }
+
+.icon-lg { width: 4rem; height: 4rem; }
+
+.sr-only { position: absolute; margin: -1px; border: 0; padding: 0; width: 1px; height: 1px; overflow: hidden; clip: rect(0 0 0 0); text-transform: none; }
+
+.img-responsive { max-width: 100%; height: auto; }
+
+.video-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; }
+
+.video-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
 .xs-p-0 { padding: 0rem; }
 
 .xs-p-1 { padding: 1rem; }
@@ -348,33 +426,35 @@ label { font-weight: 500; }
   .xl-ml-3 { margin-left: 3rem; }
   .xl-ml-4 { margin-left: 4rem; } }
 
-.txt-underline { text-decoration: underline; }
+.table-default { width: 100%; border-collapse: collapse; }
 
-.txt-semibold { font-weight: 500; }
+@media (max-width: 768px) { .table-default thead { display: none; } }
 
-.txt-ucase { text-transform: uppercase; }
+.table-default thead > tr > th { font-weight: 500; font-size: 12px; text-transform: uppercase; position: relative; }
 
-.txt-read { max-width: 60rem; }
+.table-default thead > tr > th:not(:first-of-type) { border-left: 1px solid #eee; }
 
-.txt-brand { color: #4483ce; }
+.table-default thead > tr > th:not(:last-of-type) { border-right: 1px solid #eee; }
 
-.txt-large { font-size: 3rem; line-height: 1; font-weight: 700; }
+.table-default tbody > tr > td { padding: 0.5rem 1rem; vertical-align: top; color: #888; }
 
-.txt-medium { font-size: 1.5rem; line-height: 1.2; }
+.table-default.table-striped tbody tr:nth-of-type(odd) { background: rgba(0, 0, 0, 0.025); }
 
-.icon-stroke { stroke: currentColor; }
+@media screen and (max-width: 767px) { .table-default { border: 0; }
+  .table-default thead { display: none; }
+  .table-default tr { margin-bottom: 10px; display: block; border: 1px solid #eee; background: white; }
+  .table-default td { text-align: right; font-size: 13px; border-bottom: 1px solid #eee; border-top: 0 !important; }
+  .table-default td:last-child { border-bottom: 0; }
+  .table-default td:before { content: attr(data-label); float: left; text-transform: uppercase; }
+  .table-default tbody td, .table-default tbody th { display: block !important; }
+  .table-default .block-column { text-align: left; }
+  .table-default .block-column:before { float: none; display: block; margin-bottom: 0.5rem; } }
 
-.icon-fill { fill: currentColor; }
+.table-default tbody > tr > td:first-of-type { text-align: left; position: relative; }
 
-.icon-sm { width: 1rem; height: 1rem; }
+.table-default tbody > tr > td:first-of-type:before { display: block; float: none; }
 
-.icon-md { width: 3rem; height: 3rem; }
-
-.icon-lg { width: 4rem; height: 4rem; }
-
-.sr-only { position: absolute; margin: -1px; border: 0; padding: 0; width: 1px; height: 1px; overflow: hidden; clip: rect(0 0 0 0); text-transform: none; }
-
-.g-footer { background: #343434; color: white; position: relative; padding: 0 0; z-index: 12; }
+.table-default tbody .name { font-weight: 500; }
 
 .grid { display: grid; grid-template-columns: repeat(4, 1fr); grid-column-gap: 2rem; }
 
@@ -618,89 +698,6 @@ label { font-weight: 500; }
   .first-xl { -webkit-box-ordinal-group: 0; -ms-flex-order: -1; order: -1; }
   .last-xl { -webkit-box-ordinal-group: 2; -ms-flex-order: 1; order: 1; } }
 
-.img-responsive { max-width: 100%; height: auto; }
+.g-footer { background: #343434; color: white; position: relative; padding: 0 0; z-index: 12; }
 
-.video-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; }
-
-.video-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
-
-.btn-g { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; margin-bottom: 0; text-align: center; vertical-align: middle; -ms-touch-action: manipulation; touch-action: manipulation; cursor: pointer; background-image: none; border: 0; white-space: nowrap; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; font-weight: 700; padding: 0 1rem; min-height: 2.5rem; text-transform: uppercase; font-size: 1rem; letter-spacing: -0.025rem; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
-
-button { background: transparent; -webkit-appearance: none; -moz-appearance: none; appearance: none; border: 0; }
-
-.btn-back { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-bottom: 2rem; text-transform: uppercase; font-size: 0.75rem; -webkit-transition: all 0.15s; transition: all 0.15s; font-weight: 700; }
-
-.btn-back svg { margin-right: 0.5rem; -webkit-transition: all 0.15s; transition: all 0.15s; }
-
-.btn-back:hover svg, .btn-back:focus svg { -webkit-animation: bounce-left 0.5s forwards; animation: bounce-left 0.5s forwards; }
-
-.btn-forward { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; text-transform: uppercase; font-weight: 700; font-size: 0.875rem; padding-left: 0; padding-right: 0; }
-
-.btn-forward svg { margin-left: 0.5rem; width: 1rem; height: 1rem; }
-
-.input-text { padding: 0.25rem 0.5rem; -webkit-appearance: none; -moz-appearance: none; appearance: none; border: 0; background: white; line-height: 1; width: 100%; min-height: 2rem; font-size: 0.9rem; border-radius: 0; }
-
-.input-text.large { min-height: 2.5rem; }
-
-.input-text.medium { min-height: 2.5rem; }
-
-.radio-block { display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; padding-top: 0.0625rem; margin-bottom: 0.75rem; }
-
-.radio-block:hover .radio { border-color: white; }
-
-.radio-block .radio { margin: 0; display: block; position: absolute; border: 0.2rem solid white; border-radius: 100%; height: 1.8rem; width: 1.8rem; top: 0; left: 0; z-index: 5; -webkit-transition: border .25s linear; transition: border .25s linear; }
-
-.radio-block .radio::before { display: block; position: absolute; content: ''; border-radius: 100%; height: 0.75rem; width: 0.75rem; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); -webkit-transition: background 0.15s linear; transition: background 0.15s linear; }
-
-.radio-block .radio-label { padding-left: 2.5rem; position: relative; z-index: 5; margin: 0; height: 28px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-
-.radio-block input[type=radio]:checked ~ .radio { border: 0.2rem solid #81abde; }
-
-.radio-block input[type=radio]:checked ~ .radio::before { background: #81abde; }
-
-.radio-block input[type=radio]:checked ~ label { color: #81abde; }
-
-.input-horizontal { margin-bottom: 1rem; position: relative; }
-
-@media (min-width: 768px) { .input-horizontal { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -ms-flex-wrap: wrap; flex-wrap: wrap; }
-  .input-horizontal > label { width: 10rem; line-height: 1.2; padding-right: 2rem; }
-  .input-horizontal input, .input-horizontal select { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; } }
-
-.input-horizontal label.error { margin-left: 10rem; }
-
-.input-horizontal .req { color: #e24f44; position: absolute; left: -1rem; }
-
-.table-default { width: 100%; border-collapse: collapse; }
-
-@media (max-width: 768px) { .table-default thead { display: none; } }
-
-.table-default thead > tr > th { font-weight: 500; font-size: 12px; text-transform: uppercase; position: relative; }
-
-.table-default thead > tr > th:not(:first-of-type) { border-left: 1px solid #eee; }
-
-.table-default thead > tr > th:not(:last-of-type) { border-right: 1px solid #eee; }
-
-.table-default tbody > tr > td { padding: 0.5rem 1rem; vertical-align: top; color: #888; }
-
-.table-default.table-striped tbody tr:nth-of-type(odd) { background: rgba(0, 0, 0, 0.025); }
-
-@media screen and (max-width: 767px) { .table-default { border: 0; }
-  .table-default thead { display: none; }
-  .table-default tr { margin-bottom: 10px; display: block; border: 1px solid #eee; background: white; }
-  .table-default td { text-align: right; font-size: 13px; border-bottom: 1px solid #eee; border-top: 0 !important; }
-  .table-default td:last-child { border-bottom: 0; }
-  .table-default td:before { content: attr(data-label); float: left; text-transform: uppercase; }
-  .table-default tbody td, .table-default tbody th { display: block !important; }
-  .table-default .block-column { text-align: left; }
-  .table-default .block-column:before { float: none; display: block; margin-bottom: 0.5rem; } }
-
-.table-default tbody > tr > td:first-of-type { text-align: left; position: relative; }
-
-.table-default tbody > tr > td:first-of-type:before { display: block; float: none; }
-
-.table-default tbody .name { font-weight: 500; }
-
-/*
-Generated from /scss/main.scss on:
-2017-12-12T02:58:31Z
-*/
+/* Generated from /scss/main.scss on: 2017-12-18T17:56:08Z */
