--- a/main.scss
+++ b/main.scss
@@ -28,11 +28,9 @@
   "organisms/page";
 
 //-- Templates
-//@import
-//  "templates/";
+// @import "templates/";
 
 //-- Pages
-//@import
-//  "pages/*";
+// @import "pages/*";
 
 /* Generated from /scss/main.scss on: 2017-12-18T17:56:08Z */
