--- a/config/_mixins.scss
+++ b/config/_mixins.scss
@@ -20,7 +20,7 @@
   -webkit-font-smoothing: antialiased;
 }
 
-@mixin max-content($width:$screen-lg) {
+@mixin max-content($width:($screen-lg - $gutter-compensation)) {
   margin-left:auto;
   margin-right:auto;
   max-width:$width;
