*? this aint rails son

--- a/main.scss
+++ b/main.scss
@@ -31,6 +31,6 @@
 // @import "templates/";
 
 //-- Pages
-// @import "pages/*";
+// @import "pages/";
 
 /* Generated from /scss/main.scss on: 2017-12-18T17:56:08Z */
