--- a/atoms/_helpers.scss
+++ b/atoms/_helpers.scss
@@ -1,45 +1,27 @@
+//-- Text Helpers
 .txt-underline {
-  text-decoration:underline;
+  text-decoration: underline;
 }
 .txt-semibold {
   @include font-semibold;
 }
 .txt-ucase {
-  text-transform:uppercase;
+  text-transform: uppercase;
 }
 .txt-read {
-  max-width:60rem;
+  max-width: 60rem;
 }
 .txt-brand {
-  color:$brand-primary;
+  color: $brand-primary;
 }
 .txt-large {
-  font-size:3rem;
-  line-height:1;
+  font-size: 3rem;
+  line-height: 1;
   @include font-bold;
 }
 .txt-medium {
-  font-size:1.5rem;
-  line-height:1.2;
-}
-
-.icon-stroke {
-  stroke:currentColor;
-}
-.icon-fill {
-  fill:currentColor;
-}
-.icon-sm {
-  width:$gap-sm;
-  height:$gap-sm;
-}
-.icon-md {
-  width:$gap-md;
-  height:$gap-md;
-}
-.icon-lg {
-  width:$gap-lg;
-  height:$gap-lg;
+  font-size: 1.5rem;
+  line-height: 1.2;
 }
 
 .sr-only {
