--- a/base/_settings.scss
+++ b/base/_settings.scss
@@ -5,7 +5,7 @@ $debugger:                  false;
 $css4-variables:            true;
 
 //-- Compile styles from _spacing.scss
-$spacing-helpers:           true;
+$spacing-helpers:           false;
 
 //-- Enables _flexboxgrid styles (options: true, false)
 $flexbox-grid:              true;
