--- a/modules/_flexbox-grid.scss
+++ b/modules/_flexbox-grid.scss
@@ -4,6 +4,157 @@
   grid-column-gap: $gap;
 }
 
+@mixin flexbox {
+  display: flex;
+}
+@mixin inline-flex {
+  display: inline-flex;
+}
+@mixin flex-direction($value: row) {
+  @if $value == row-reverse {
+    -webkit-box-direction: reverse;
+    -webkit-box-orient: horizontal;
+  } @else if $value == column {
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+  } @else if $value == column-reverse {
+    -webkit-box-direction: reverse;
+    -webkit-box-orient: vertical;
+  } @else {
+    -webkit-box-direction: normal;
+    -webkit-box-orient: horizontal;
+  }
+  flex-direction: $value;
+}
+
+// Shorter version:
+@mixin flex-dir($args...) { @include flex-direction($args...); }
+
+@mixin flex-wrap($value: nowrap) {
+  // No Webkit Box fallback.
+  -webkit-flex-wrap: $value;
+  -moz-flex-wrap: $value;
+  @if $value == nowrap {
+    -ms-flex-wrap: none;
+  }
+  @else {
+    -ms-flex-wrap: $value;
+  }
+  flex-wrap: $value;
+}
+
+@mixin flex-flow($values: (row nowrap)) {
+  // No Webkit Box fallback.
+  flex-flow: $values;
+}
+
+@mixin order($int: 0) {
+  order: $int;
+}
+
+@mixin flex-grow($int: 0) {
+  flex-grow: $int;
+}
+
+@mixin flex-shrink($int: 1) {
+  flex-shrink: $int;
+}
+
+@mixin flex-basis($value: auto) {
+  flex-basis: $value;
+}
+
+@mixin flex($fg: 1, $fs: null, $fb: null) {
+  // Set a variable to be used by box-flex properties
+  $fg-boxflex: $fg;
+
+  // Box-Flex only supports a flex-grow value so let's grab the
+  // first item in the list and just return that.
+  @if type-of($fg) == 'list' {
+    $fg-boxflex: nth($fg, 1);
+  }
+
+  flex: $fg $fs $fb;
+}
+
+@mixin justify-content($value: flex-start) {
+  @if $value == flex-start {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+  } @else if $value == flex-end {
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+  } @else if $value == space-between {
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+  } @else if $value == space-around {
+    -ms-flex-pack: distribute;
+  } @else {
+    -webkit-box-pack: $value;
+    -ms-flex-pack: $value;
+  }
+  justify-content: $value;
+}
+  // Shorter version:
+  @mixin flex-just($args...) { @include justify-content($args...); }
+
+@mixin align-items($value: stretch) {
+  @if $value == flex-start {
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+  } @else if $value == flex-end {
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+  } @else {
+    -webkit-box-align: $value;
+    -ms-flex-align: $value;
+  }
+  align-items: $value;
+}
+
+@mixin align-self($value: auto) {
+  // No Webkit Box Fallback.
+  -webkit-align-self: $value;
+  -moz-align-self: $value;
+  @if $value == flex-start {
+    -ms-flex-item-align: start;
+  } @else if $value == flex-end {
+    -ms-flex-item-align: end;
+  } @else {
+    -ms-flex-item-align: $value;
+  }
+  align-self: $value;
+}
+@mixin align-content($value: stretch) {
+  // No Webkit Box Fallback.
+  -webkit-align-content: $value;
+  -moz-align-content: $value;
+  @if $value == flex-start {
+    -ms-flex-line-pack: start;
+  } @else if $value == flex-end {
+    -ms-flex-line-pack: end;
+  } @else {
+    -ms-flex-line-pack: $value;
+  }
+  align-content: $value;
+}
+
+@mixin flexboxgrid-sass-col-common {
+  box-sizing: border-box;
+
+  // split @include flex(0, 0, auto) into individual props
+  @include flex-grow(0);
+  @include flex-shrink(0);
+
+  // we leave @include flex-basis(auto) out of common because
+  // in some spots we need it and some we dont
+  // more why here: https://github.com/kristoferjoseph/flexboxgrid/issues/126
+
+  border-right: $half-gutter-width solid transparent;
+  border-left: $half-gutter-width solid transparent;
+  background-clip: padding-box;
+}
+
 @if $flexbox-grid == true {
 
   // Create or remove breakpoints for your project
@@ -15,148 +166,8 @@
     lg 75em 71rem,
     xl 92em 90rem !default;
 
-  @mixin flexbox {
-    display: flex;
-  }
-
   %flexbox { @include flexbox; }
-
-  @mixin inline-flex {
-    display: inline-flex;
-  }
-
   %inline-flex { @include inline-flex; }
-
-  @mixin flex-direction($value: row) {
-    @if $value == row-reverse {
-      -webkit-box-direction: reverse;
-      -webkit-box-orient: horizontal;
-    } @else if $value == column {
-      -webkit-box-direction: normal;
-      -webkit-box-orient: vertical;
-    } @else if $value == column-reverse {
-      -webkit-box-direction: reverse;
-      -webkit-box-orient: vertical;
-    } @else {
-      -webkit-box-direction: normal;
-      -webkit-box-orient: horizontal;
-    }
-    flex-direction: $value;
-  }
-
-  // Shorter version:
-  @mixin flex-dir($args...) { @include flex-direction($args...); }
-
-  @mixin flex-wrap($value: nowrap) {
-    // No Webkit Box fallback.
-    -webkit-flex-wrap: $value;
-    -moz-flex-wrap: $value;
-    @if $value == nowrap {
-      -ms-flex-wrap: none;
-    } @else {
-      -ms-flex-wrap: $value;
-    }
-    flex-wrap: $value;
-  }
-
-  @mixin flex-flow($values: (row nowrap)) {
-    // No Webkit Box fallback.
-    flex-flow: $values;
-  }
-
-  @mixin order($int: 0) {
-    order: $int;
-  }
-
-  @mixin flex-grow($int: 0) {
-    flex-grow: $int;
-  }
-
-  @mixin flex-shrink($int: 1) {
-    flex-shrink: $int;
-  }
-
-  @mixin flex-basis($value: auto) {
-    flex-basis: $value;
-  }
-
-  @mixin flex($fg: 1, $fs: null, $fb: null) {
-    // Set a variable to be used by box-flex properties
-    $fg-boxflex: $fg;
-
-    // Box-Flex only supports a flex-grow value so let's grab the
-    // first item in the list and just return that.
-    @if type-of($fg) == 'list' {
-      $fg-boxflex: nth($fg, 1);
-    }
-
-    flex: $fg $fs $fb;
-  }
-
-  @mixin justify-content($value: flex-start) {
-    @if $value == flex-start {
-      -webkit-box-pack: start;
-      -ms-flex-pack: start;
-    } @else if $value == flex-end {
-      -webkit-box-pack: end;
-      -ms-flex-pack: end;
-    } @else if $value == space-between {
-      -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-    } @else if $value == space-around {
-      -ms-flex-pack: distribute;
-    } @else {
-      -webkit-box-pack: $value;
-      -ms-flex-pack: $value;
-    }
-    justify-content: $value;
-  }
-    // Shorter version:
-    @mixin flex-just($args...) { @include justify-content($args...); }
-
-  @mixin align-items($value: stretch) {
-    @if $value == flex-start {
-      -webkit-box-align: start;
-      -ms-flex-align: start;
-    } @else if $value == flex-end {
-      -webkit-box-align: end;
-      -ms-flex-align: end;
-    } @else {
-      -webkit-box-align: $value;
-      -ms-flex-align: $value;
-    }
-    align-items: $value;
-  }
-
-  @mixin align-self($value: auto) {
-    // No Webkit Box Fallback.
-    -webkit-align-self: $value;
-    -moz-align-self: $value;
-    @if $value == flex-start {
-      -ms-flex-item-align: start;
-    } @else if $value == flex-end {
-      -ms-flex-item-align: end;
-    } @else {
-      -ms-flex-item-align: $value;
-    }
-    align-self: $value;
-  }
-  @mixin align-content($value: stretch) {
-    // No Webkit Box Fallback.
-    -webkit-align-content: $value;
-    -moz-align-content: $value;
-    @if $value == flex-start {
-      -ms-flex-line-pack: start;
-    } @else if $value == flex-end {
-      -ms-flex-line-pack: end;
-    } @else {
-      -ms-flex-line-pack: $value;
-    }
-    align-content: $value;
-  }
-
-
-
 
   .wrapper {
     box-sizing: border-box;
@@ -205,21 +216,7 @@
     }
   }
 
-  @mixin flexboxgrid-sass-col-common {
-    box-sizing: border-box;
 
-    // split @include flex(0, 0, auto) into individual props
-    @include flex-grow(0);
-    @include flex-shrink(0);
-
-    // we leave @include flex-basis(auto) out of common because
-    // in some spots we need it and some we dont
-    // more why here: https://github.com/kristoferjoseph/flexboxgrid/issues/126
-
-    border-right: $half-gutter-width solid transparent;
-    border-left: $half-gutter-width solid transparent;
-    background-clip: padding-box;
-  }
 
   $name: xs;
   .col-#{$name} {
