cleanup declaration order, and unused variables

--- a/base/_colors.scss
+++ b/base/_colors.scss
@@ -27,5 +27,8 @@ $border-lt:                 $gray-lt;
 
 $hr-bg:                     $gray-lt;
 
+$header-bg:                 black;
+$header-color:              white;
+
 $footer-bg:                 $gray-dk;
 $footer-color:              lighten($gray-lt,30%);
