--- a/layout/_footer.scss
+++ b/layout/_footer.scss
@@ -1,7 +1,5 @@
-.g-footer {
+.site-footer {
   background:$footer-bg;
   color:$footer-color;
   position:relative;
-  padding:0 $footer-padding-x;
-  z-index:12;
 }
