--- a/base/_settings.scss
+++ b/base/_settings.scss
@@ -4,42 +4,26 @@ $debugger:                  false;
 //-- Let CSS4 make your life easier, or don't (options: true, false)
 $css4-variables:            true;
 
-//-- Compile styles from _spacing.scss
-$spacing-helpers:           true;
-
-//-- Enables _flexboxgrid styles (options: true, false)
-$flexbox-grid:              true;
-
 //--- Spacing
+$one:                       0.0625rem;
 $gap-xs:                    0.5rem;
 $gap-sm:                    1rem;
 $gap:                       2rem;
 $gap-md:                    3rem;
 $gap-lg:                    4rem;
 
-//-- Grid
-$grid-columns:              12;
-$gutter-width:              $gap-sm + $gap-xs;
-$outer-margin:              $gap-lg;
-$gutter-compensation:       $gutter-width * .5 * -1;
-$half-gutter-width:         $gutter-width * .5;
-
 //-- Viewports
-$screen-xs:                 480px;
-$screen-sm-min:             767px;
-$screen-sm:                 $screen-sm-min + 1px;
-$screen-sm-ls:              1024px;
-$screen-md:                 $screen-sm-ls + 1px;
-$screen-lg:                 1200px;
-$screen-xl:                 1440px;
-$screen-xl-min:             $screen-xl - 1px;
+$screen-xs:                 30rem;
+$screen-sm:                 48rem;
+$screen-sm-min:             $screen-sm - $one;
+$screen-sm-ls:              64rem;
+$screen-md:                 61.9375rem;
+$screen-lg:                 75rem;
+$screen-xl:                 90rem;
 
 //-- Typography
 $font-regular:              "Roboto", sans-serif;
 $font-heading:              "Roboto Condensed", sans-serif;
-$font-light:                $font-regular;
-$font-semibold:             $font-regular;
-$font-bold:                 $font-regular;
 $font-size-base:            14px;
 $line-height-small:         1.5;
 $line-height-base:          1.428571429;
@@ -57,37 +41,13 @@ $font-size-h4:              1.25rem;
 $font-size-h5:              $font-size-base;
 $font-size-h6:              0.875rem;
 
-
 //--- Layout
 $header-height:             8rem;
 $header-height-collapsed:   6.5rem;
-$header-padding-x:          0;
-$header-padding-y:          0;
-$header-bg:                 black;
-$header-nav-angle:          1.875rem;
-$header-nav-link-height:    2.5rem;
-$header-nav-angle-sm:       1.875rem;
-$header-nav-link-height-sm: 4rem;
-$header-color:              white;
-
-$logo-height:               5.25rem;
-$logo-height-collapsed:     4rem;
-
-$tag-angle:                 1.875rem;
-$tag-link-height:           2.5rem;
-$tag-angle-sm:              1.875rem;
-$tag-link-height-sm:        4rem;
 
 $sidebar-width:             16rem;
 
-
 $footer-height:             $gap-md;
-$footer-padding-x:          0;
-$footer-padding-y:          $gap-md;
-
 
 $input-height:              $gap + 0.5rem;
-
-
-$triangle-lg: 480px;
 
