--- a/modules/_forms.scss
+++ b/modules/_forms.scss
@@ -1,65 +1,32 @@
+$touch-icon-size: 1.8rem;
+
 .input-text {
-  padding:0.25rem $gap-xs;
-  appearance:none;
-  border:0;
-  background:white;
-  line-height:1;
-  width:100%;
-  min-height:$gap;
-  font-size:0.9rem;
-  border-radius:0;
-  &.large {
-    min-height:$gap + $gap-xs;
-  }
+  appearance: none;
+  background: white;
+  font-size: 0.9rem;
+  border: 0;
+  border-radius: 0;
+  line-height: 1;
+  min-height: $gap;
+  padding: ($gap-xs * 0.5) $gap-xs;
+  width: 100%;
   &.medium {
-    min-height:$input-height;
+    min-height: $input-height;
+  }
+  &.large {
+    min-height: $gap + $gap-xs;
   }
 }
 
 .radio-block {
-  display:flex;
-  position:relative;
-
-  padding-top:0.0625rem;
-  margin-bottom: 0.75rem;
+  display: flex;
+  padding-top: $one;
+  position: relative;
+  margin-bottom: $gap-sm - $gap-xs;
   &:hover {
     .radio {
-      border-color:white;
+      border-color: white;
     }
-  }
-  .radio{
-    margin:0;
-    display: block;
-    position: absolute;
-    border: 0.2rem solid white;
-    border-radius: 100%;
-    height: 1.8rem;
-    width: 1.8rem;
-    top: 0;
-    left: 0;
-    z-index: 5;
-    transition: border .25s linear;
-    &::before {
-      display: block;
-      position: absolute;
-      content: '';
-      border-radius: 100%;
-      height: 0.75rem;
-      width: 0.75rem;
-      top: 50%;
-      left: 50%;
-      transform:translate(-50%,-50%);
-      transition: background 0.15s linear;
-    }
-  }
-  .radio-label {
-    padding-left: 2.5rem;
-    position:relative;
-    z-index:5;
-    margin:0;
-    height:28px;
-    display:flex;
-    align-items:center;
   }
   input[type=radio]:checked {
     ~ .radio {
@@ -73,30 +40,64 @@
     }
   }
 }
+.radio {
+  display: block;
+  border: 0.2rem solid white;
+  border-radius: 100%;
+  height: $touch-icon-size;
+  left: 0;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  transition: border .25s linear;
+  width: $touch-icon-size;
+  z-index: 5;
+  &::before {
+    border-radius: 100%;
+    content: '';
+    display: block;
+    height: $touch-icon-size * 0.5;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    transition: background 0.15s linear;
+    width: $touch-icon-size * 0.5;
+  }
+}
+.radio-label {
+  align-items: center;
+  display: flex;
+  height: $input-height;
+  margin: 0;
+  padding-left: $touch-icon-size + $gap-xs;
+  position: relative;
+  z-index: 5;
+}
 
 .input-horizontal {
-  margin-bottom:$gap-sm;
-  position:relative;
+  margin-bottom: $gap-sm;
+  position: relative;
   @media (min-width:$screen-sm) {
-    display:flex;
-    align-items:center;
-    flex-wrap:wrap;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
     > label {
-      width:10rem;
-      line-height:1.2;
-      padding-right:$gap;
+      line-height: 1.2;
+      padding-right: $gap;
+      width: 10rem;
     }
-    input,select {
-      flex:1;
+    input,select,textarea {
+      flex: 1;
     }
   }
   label.error {
-    margin-left:10rem;
+    margin-left: 10rem;
   }
   .req {
-    color:$danger;
-    position:absolute;
-    left:-$gap-sm;
+    color: $danger;
+    left: -$gap-sm;
+    position: absolute;
   }
 }
 
